# guess_song_backend

./: .gitignore  Dockerfile  MakeFile  README.md  all.txt  data_collector.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/auth/: clerk_auth.py  dependencies.py
app/core/: app_factory.py  config.py  logger.py
app/guesses/: consts.py  logic.py  main.py  model.py  repository.py  routes.py  service.py
app/middlewares/: auth.py  consts.py  error_handler.py  rate_limiter.py  request_id.py  request_logger.py  role.py  route_rate_limiter.py
app/shared/: clerk.py  dependencies.py  exceptions.py  http.py  logger.py  request_logger.py
app/songs/: consts.py  main.py  model.py  repository.py  routes.py  service.py  utils.py
app/static/: daily_song.json  songs.json
app/users/: consts.py  main.py  model.py  repository.py  routes.py  service.py  third_party_api_calls.py
app/webhooks/: main.py  paypal.py
config/: prod.yaml
firebase/: firebase.py  firebase_creds.json
scripts/: clean.py  run_api.py
tests/: conftest.py
tests/guesses/: test_routes.py
tests/songs/: test_routes.py
