[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"  # If you're using .env files

[tool.poetry.scripts]
start-api = "scripts.run_api:main"
clean = "scripts.clean:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"